<resources>
    <string name="app_name">MagicteaET</string>
    <string name="open_drawer">打开侧拉菜单</string>
    <string name="close_drawer">关闭侧拉菜单</string>
    <string name="not_login">未登录</string>
    <string name="settings">设置</string>
    <string name="exit">退出</string>
    <string name="fetch_failed">获取失败</string>
    <string name="category">版块</string>
    <string name="recent">最新</string>
    <string name="popular">热门</string>
    <string name="topic">主题</string>
    <string name="post">帖子</string>
    <string name="view">浏览</string>
    <string name="login">登录</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="logout_success">注销成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="chat">聊天</string>
    <string name="follow">关注</string>
    <string name="reputation">声望</string>
    <string name="dataBrowsing">资料浏览</string>
    <string name="fans">粉丝</string>
    <string name="email">电子邮件</string>
    <string name="register_time">注册时间</string>
    <string name="login_time">最后登录</string>
</resources>
