<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:paddingStart="12dp"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/account_inputlayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/please_input_account"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_inputlayout"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:inputType="textPassword"
            android:hint="@string/please_input_password"/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/login_btn_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:gravity="center"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forget_password"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"/>



</LinearLayout>
