<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="#ededed">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/muye">

        <com.stareating.nodeet.ui.common.AvatarView
            android:id="@+id/avatar"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            app:riv_border_color="#77f2f3f5"
            app:riv_border_width="0.5dp"
            app:riv_corner_radius="40dp"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/avatar"
            android:layout_marginLeft="80dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/not_login"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:background="#2097f3"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp">
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_chat"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/chat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chat"
                android:textColor="@android:color/white"
                android:layout_marginLeft="4dp"
                android:textSize="10sp"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:id="@+id/follow_btn"
            android:layout_width="32dp"
            android:layout_height="20dp"
            android:background="#4caf50"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:text="@string/follow"
            android:textSize="10sp"
            android:gravity="center"
            android:layout_marginLeft="8dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/reputation"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                tools:text="134"
                android:gravity="center"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="@string/reputation"
                android:gravity="center_horizontal"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/post"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                tools:text="134"
                android:gravity="center"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="@string/post"
                android:gravity="center_horizontal"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/dataBrowsing"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                tools:text="134"
                android:gravity="center"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="@string/dataBrowsing"
                android:gravity="center_horizontal"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/fans"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                tools:text="134"
                android:gravity="center"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/fans"
                android:gravity="center_horizontal"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/following"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                tools:text="134"
                android:gravity="center"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/follow"
                android:gravity="center_horizontal"
                android:textSize="10sp"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/email"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="987980045@qq.com"
                android:textSize="12sp"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/register_time"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/register_time"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="大约12小时之前"
                android:textSize="12sp"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_time"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/login_time"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="大约11小时之前"
                android:textSize="12sp"
                android:gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
